--- a/package.json
+++ b/package.json
@@ -18,9 +18,9 @@
   },
   "homepage": "https://github.com/maxrjohnson23/Eat-Da-Burger#readme",
   "dependencies": {
+    "body-parser": "^1.19.0",
     "express": "^4.16.2",
     "express-handlebars": "^3.0.0",
-    "mysql": "^2.15.0",
-    "body-parser": "latest"
+    "mysql": "^2.15.0"
   }
 }
